IDE-1706 Drop MaxPermSize